--- a/pom.xml
+++ b/pom.xml
@@ -78,6 +78,11 @@
             <version>2.4.3</version>
         </dependency>
 
+        <!-- PasswordEncoder Dependency -->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
 
 
     </dependencies>
